Add config cache and implementation cache, upgrade in use case of increment favorite items in mongdb