@@ -2,49 +2,49 @@ package com.coupon.favorites.items.cache.infrastructure;
 
 import com.coupon.favorites.items.cache.domain.service.CacheRepository;
 import com.coupon.favorites.items.maximizedcoupon.domain.valueobject.Item;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import org.springframework.data.redis.core.StringRedisTemplate;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
 
-import java.util.*;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.time.Duration;
+import java.util.Collection;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+
 
 @Repository
 public class CacheRepositoryImpl implements CacheRepository {
 
-    private final StringRedisTemplate redisTemplate;
+    private final RedisTemplate<String, Item> redisTemplate;
 
-    private static final String  KEY = "item";
+    private final long ttl ;
 
-    private static final long TTL = 300L;
-
-    public CacheRepositoryImpl(StringRedisTemplate redisTemplate) {
+    public CacheRepositoryImpl(
+            RedisTemplate<String, Item> redisTemplate,
+            @Value("${spring.data.redis.ttl.seconds:350}") long ttl
+    ) {
         this.redisTemplate = redisTemplate;
+        this.ttl = ttl;
     }
 
     @Override
     public List<Item> getPriceItemsByIds(Collection<String> ids) {
+        List<Item> items = new ArrayList<>();
 
-        List<Object> items = redisTemplate.opsForHash().multiGet(KEY, Arrays.asList(ids.toArray()));
+        List<Item> redisItems = redisTemplate.opsForValue().multiGet(ids);
 
-        return items.stream()
-                .filter(Objects::nonNull)
-                .map(item -> {
-                    try {
-                        return new Item(item.toString());
-                    } catch (JsonProcessingException e) {
-                        throw new RuntimeException(e);
-                    }
-                }).collect(Collectors.toList());
+        if (redisItems != null) {
+            items = redisItems.stream().filter(Objects::nonNull).toList();
+        }
+
+        return items;
     }
 
     @Override
     public void savePriceItems(Collection<Item> ids) {
-        Map<String, String> itemPrices = ids.stream()
-                .collect(Collectors.toMap(Item::getId, Item::toString));
-
-        redisTemplate.opsForHash().putAll(KEY, itemPrices);
-        redisTemplate.expire(KEY, TTL, TimeUnit.SECONDS);
+        for (Item item : ids) {
+            redisTemplate.opsForValue().set(item.getId(), item, Duration.ofSeconds(ttl));
+        }
     }
 }
